--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^3.0.0-beta.6",
+    "netlify-cli": "^6.9.6",
     "react": "^17.0.2",
+    "react-button-shine": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typing-animation": "^1.6.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
